<resources>
    <string name="app_name">activity</string>
    <string name="connecting">Connecting</string>
    <string name="mi_band_2">Mi band 2</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="choose_device">Mi band 2</string>
    <string name="select_a_device">Select a device from the list to
        analyze.
    </string>
    <string name="beat">beat</string>
    <string name="edit">EDIT</string>
    <string name="add_activity">Add Activity</string>
    <string name="activity_name">Activity name</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Train</string>
    <string name="title_dashboard">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_notifications">Notifications</string>
    <string name="tipsDataActivity">There will be data about your activities. They are automatically sent to our
        server.
    </string>
    <string name="settings">Settings</string>
    <string name="activities">Activities</string>
    <string name="data">Data</string>
    <string name="data_tip">There will be data about your activities. They are automatically sent to our server.
    </string>
    <string name="delete_device">Delete Device</string>
    <string name="tips_delete_device">Click ok if you want to delete the last device. This action is irreversible.
    </string>
    <string name="delete_measurements">Delete Measures</string>
    <string name="delete_measurements_tip">Click ok if you want to delete all meters from your device. Measurements
        will remain on our servers.
    </string>
    <string name="comment_detail">It\'s been a long and wonderful day. Sakura leaves fell at a speed of 5 centimeters
        per second, while Arseny ran.
    </string>
    <string name="default_mac">73:F6:C2:30:66:88</string>
    <string name="share">SHARE</string>
    <string name="forget_device">Forget device</string>
    <string name="delete_measurements_title">Delete measurements</string>
    <string name="return_data_is_not_possible">Return data is not possible</string>
    <string name="create_new_user">Create new user</string>
    <string name="user_name">User name</string>
    <string name="sergei_myachin">Сергей Мячин</string>
    <string name="naruto_uzumaki">Naruto Uzumaki</string>
    <string name="runner">Runner</string>
    <string name="_03_06_19_run">03.06.19 - RUN</string>
    <string name="arseny_day_sunny">Arseny, day, sunny</string>
    <string name="motionname">MotionName</string>
    <string name="run">RUN</string>
</resources>
