<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="50dp">

    <TextView
            android:id="@+id/DeviceName"
            android:text="@string/mi_band_2"
            style="@style/DeviceNames"
            android:layout_width="227dp"
            android:layout_height="22dp"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="2dp"
    />

    <TextView
            android:id="@+id/MacAddress"
            android:text="@string/default_mac"
            style="@style/MacAddresses"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/DeviceName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DeviceName"/>

    <ImageView
            android:id="@+id/beat_image"
            android:layout_width="26dp"
            android:layout_height="20dp"
            app:srcCompat="@drawable/ic_device"
            android:contentDescription="@string/beat"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
