<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:background="@color/white"
                                                   tools:context=".application.SettingsActivity"
                                                   android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="187dp"
            android:layout_height="37dp"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/forgetDeviceLayout"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="6dp">

        <TextView
                android:text="@string/forget_device"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:layout_marginTop="8dp"
                style="@style/ImportantText"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="231dp"
            android:layout_height="64dp"
            android:id="@+id/deleteMeasurementsLayout"
            app:layout_constraintTop_toBottomOf="@+id/forgetDeviceLayout"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:text="@string/delete_measurements_title"
                style="@style/ImportantText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0"/>

        <TextView
                android:text="@string/return_data_is_not_possible"
                android:textColor="#6BF95F62"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:id="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:layout_constraintStart_toStartOf="@+id/textView7"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>