<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/white"
                                                   tools:context=".application.Profile">

    <TextView android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:text="@string/naruto_uzumaki"
              android:textColor="@color/salmonColor"
              style="@style/profileText"
              android:id="@+id/userName"
              android:layout_marginTop="24dp"
              app:layout_constraintTop_toTopOf="@+id/circleUserImage"
              app:layout_constraintStart_toEndOf="@+id/circleUserImage"
              android:layout_marginStart="20dp"/>

    <TextView android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:text="@string/runner"
              style="@style/profileText"
              android:textColor="@color/blueDark"
              android:id="@+id/userСareer"
              app:layout_constraintTop_toBottomOf="@+id/userName"
              app:layout_constraintStart_toStartOf="@+id/userName"/>

    <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/profile_img"
            android:id="@+id/circleUserImage"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="0dp"
                                                       android:layout_height="50dp"
                                                       android:id="@+id/dataProfileLayout"
                                                       app:layout_constraintStart_toStartOf="parent"
                                                       app:layout_constraintEnd_toEndOf="parent"
                                                       app:layout_constraintHorizontal_bias="0.0"
                                                       android:layout_marginTop="44dp"
                                                       app:layout_constraintTop_toBottomOf="@+id/circleUserImage">

        <ImageView android:layout_width="33dp"
                   android:layout_height="33dp"
                   app:srcCompat="@drawable/ic_cloud"
                   app:layout_constraintStart_toStartOf="parent"
                   android:layout_marginStart="20dp"
                   android:layout_marginTop="8dp"
                   app:layout_constraintTop_toTopOf="parent"
                   android:layout_marginBottom="8dp"
                   app:layout_constraintBottom_toBottomOf="parent"
                   android:id="@+id/dataProfileImage"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/data"
                  app:layout_constraintStart_toEndOf="@+id/dataProfileImage"
                  style="@style/profileText"
                  android:layout_marginStart="12dp"
                  android:layout_marginTop="8dp" android:textColor="@color/blueDark"
                  app:layout_constraintTop_toTopOf="parent"
                  android:layout_marginBottom="8dp"
                  android:fontFamily="sans-serif-light"
                  android:textSize="18sp"
                  app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="0dp"
                                                       android:layout_height="50dp"
                                                       android:layout_marginTop="8dp"
                                                       app:layout_constraintTop_toBottomOf="@+id/dataProfileLayout"
                                                       android:id="@+id/activitiesProfileLayout"
                                                       app:layout_constraintStart_toStartOf="parent"
                                                       app:layout_constraintEnd_toEndOf="parent"
                                                       app:layout_constraintHorizontal_bias="0.0">

        <ImageView android:layout_width="33dp"
                   android:layout_height="33dp"
                   app:srcCompat="@drawable/ic_organize"
                   app:layout_constraintStart_toStartOf="parent"
                   android:layout_marginStart="20dp"
                   android:layout_marginTop="8dp"
                   app:layout_constraintTop_toTopOf="parent"
                   android:layout_marginBottom="8dp"
                   app:layout_constraintBottom_toBottomOf="parent"
                   android:id="@+id/activitiesProfileImage"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/activities"
                  app:layout_constraintStart_toEndOf="@+id/activitiesProfileImage"
                  style="@style/profileText"
                  android:layout_marginStart="12dp"
                  android:layout_marginTop="8dp"
                  android:textColor="@color/blueDark"
                  app:layout_constraintTop_toTopOf="parent"
                  android:layout_marginBottom="8dp"
                  android:fontFamily="sans-serif-light"
                  android:textSize="18sp"
                  app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="0dp"
                                                       android:layout_height="50dp"
                                                       android:layout_marginTop="8dp"
                                                       app:layout_constraintTop_toBottomOf="@+id/activitiesProfileLayout"
                                                       android:id="@+id/settingsProfileLayout"
                                                       app:layout_constraintStart_toStartOf="parent"
                                                       app:layout_constraintEnd_toEndOf="parent"
                                                       app:layout_constraintHorizontal_bias="0.0">
        <ImageView android:layout_width="33dp"
                   android:layout_height="33dp"
                   app:srcCompat="@drawable/ic_settings"
                   app:layout_constraintStart_toStartOf="parent"
                   android:layout_marginStart="20dp"
                   android:layout_marginTop="8dp"
                   app:layout_constraintTop_toTopOf="parent"
                   android:layout_marginBottom="8dp"
                   app:layout_constraintBottom_toBottomOf="parent"
                   android:id="@+id/settingsProfileImage"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/settings"
                  app:layout_constraintStart_toEndOf="@+id/settingsProfileImage"
                  style="@style/profileText"
                  android:textColor="@color/blueDark"
                  android:layout_marginStart="12dp"
                  android:layout_marginTop="8dp"
                  app:layout_constraintTop_toTopOf="parent"
                  android:layout_marginBottom="8dp"
                  android:fontFamily="sans-serif-light"
                  android:textSize="18sp"
                  app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
